add username input area and show username

--- a/sossii/web-client/web/index.html
+++ b/sossii/web-client/web/index.html
@@ -48,6 +48,8 @@
           <h4 class="modal-title" id="myModalLabel">投稿</h4>
         </div>
         <div class="modal-body">
+          ユーザ名
+          <p><input type="text" class="form-control message-username"></p>
           コメント
           <p><textarea class="form-control message-body" rows="3"></textarea></p>
         </div>
